tests/js_error/source_locations/expression/call/call_maybe_eval_varargs.exp
Error: 
  ┌ source_locations/expression/call/call_maybe_eval_varargs.js:2:9
  |
2 |   throw new Error();
  |         ^
Stack trace:
  at eval (source_locations/expression/call/call_maybe_eval_varargs.js:2:9)
  at <global> (source_locations/expression/call/call_maybe_eval_varargs.js:5:1)