tests/js_error/source_locations/expression/call/call_maybe_eval_varargs.js
function eval() {
  throw new Error();
}

eval(...[]);